# linalg-numpy

./: .gitignore  main.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
linalg_lib/: decompositions.py  matrix_operations.py  vector_operations.py
