[project]
name = "linalg-numpy-example"
version = "0.1.0"
description = "A sample project for NumPy calculation with uv."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "scipy"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "mypy"
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C90", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
